Inverted Zoom on mobile. Closes #25. Also fixed button handlers to be on touch start for #27.

--- a/less/style.less
+++ b/less/style.less
@@ -389,8 +389,8 @@ a.@{pre}engage-trigger img {
 .@{pre}engage-wrapper.@{pre}gallery{
 	padding-bottom: 25%;
 
-	.@{pre}help-wrapper{
-		height: 64%;
+	.@{pre}help-wrapper, .@{pre}zoom, div.@{pre}frame-cover{
+		height: 80%;
 	}
 }
 
